# MultiFunctionPlotter

./: .mcp.json  MANIFEST.in.txt  README.md  custom_style.mplstyle  install.sh  mcp.json  mfp.py  mv2bin.sh  phrophet_pred.py  push.sh  pyproject.toml  requirements.txt
docs/: index.html  script.js  styles.css
examples/: data.csv  plot.json
src/: mfp.py  mfp_data_manipulator.py  mfp_dmanp.py  mfp_dmanp_help.py  mfp_help.py  mfp_server.py
src/multifunctionplotter/: mfp.py  mfp_dmanp.py  mfp_server.py  prophet_pred.py
src/multifunctionplotter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: climate_plots.py  plot.json  plot_commands.txt  survival_by_class.csv  test_mfp.py  titanic_survival.csv
versions/: mfp_data_manipulator_v1.py  mfp_server_v1.py  mfp_v1.py  mfp_v2.py  mfp_v3.py  mfp_v4.py  mfp_v5.py  mfp_v6.py  mfp_v7.py
