[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multifunctionplotter"
version = "1.1.2"
description = "Publication-quality plots from CSV/TXT/DAT files — CLI, Python API, and MCP agent tool"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
    { name = "Swarnadeep Seth" }
]

keywords = ["plotting", "visualization", "matplotlib", "cli", "mcp", "ai-agent"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Environment :: Console",
]

dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "seaborn",
    "fastmcp",
]

[project.optional-dependencies]
forecast = ["prophet", "scipy", "statsmodels"]

# ENTRY POINTS
[project.scripts]
mfp = "multifunctionplotter.mfp:main"
mfp-mcp = "multifunctionplotter.mfp_server:main"

[project.urls]
Homepage = "https://github.com/SwarnadeepSeth/MultiFunctionPlotter"
Repository = "https://github.com/SwarnadeepSeth/MultiFunctionPlotter"

# PACKAGE DISCOVERY
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# include style file inside package
[tool.setuptools.package-data]
"multifunctionplotter" = ["custom_style.mplstyle"]